--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-localize": "^2.0.1",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
@@ -54,7 +55,8 @@
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-localize": "^2.0.1"
   },
   "repository": {
     "type": "git",
