--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react-native-svg": "^12.1.0",
-    "react-native-localize": "^2.0.1"
+    "react-native-localize": "^2.0.1",
+    "react-native-svg": "^12.1.0"
   },
   "repository": {
     "type": "git",
