--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,14 +1,16 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'ReactNativeCallingCodePicker' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
-
-  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
 
   target 'ReactNativeCallingCodePickerTests' do
     inherit! :complete
@@ -18,18 +20,11 @@ target 'ReactNativeCallingCodePicker' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!
+  # you should disable the next line.
+  use_flipper!()
+
   post_install do |installer|
-    flipper_post_install(installer)
-  end
-end
-
-target 'ReactNativeCallingCodePicker-tvOS' do
-  # Pods for ReactNativeCallingCodePicker-tvOS
-
-  target 'ReactNativeCallingCodePicker-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
