--- a/package.json
+++ b/package.json
@@ -48,7 +48,13 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0"
+  },
+  "peerDependencies": {
+    "react-native-localize": "^2.0.1",
+    "react-native-svg": "^12.1.0"
   },
   "repository": {
     "type": "git",
@@ -59,6 +65,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
