--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@testing-library/react-native": "^8.0.0",
     "react": "^17.0.2",
     "react-native": "^0.66.2",
     "react-native-localize": "^2.1.5",
