--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "resolveJsonModule": true,
     "strict": true
   },
-  "include": ["src/index.tsx"],
+  "include": ["src"],
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
