--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,34 +1,19 @@
-name: Build and Test React Application
+name: Android
 
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_test:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build:
+    runs-on: ubuntu-20.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: clean cache
-        run: npm cache clean --force
-      - name: install
-        run: npm ci
-      - name: npm install
-        run: npm install
+    - uses: actions/checkout@v2
+    - name: Use Node.js v12
+      uses: actions/setup-node@v1
+      with:
+        node-version: 16.x
+
+    - run: npm ci
+
+    - run: ./gradlew assembleDebug -Dorg.gradle.logging.level=info
+      working-directory: android
+      name: Build Android apk (debug)
