--- a/.github/workflows/build_test_ios.yml
+++ b/.github/workflows/build_test_ios.yml
@@ -16,11 +16,11 @@ jobs:
       name: Install pod dependencies
     - name: Build iOS (debug)
       run: "xcodebuild \
-        -workspace ios/HelloReactNative.xcworkspace \
-        -scheme HelloReactNative \
+        -workspace ios/ReactNativeCallingCodePicker.xcworkspace \
+        -scheme ReactNativeCallingCodePicker \
         clean archive \
         -sdk iphoneos \
         -configuration Debug \
         -UseModernBuildSystem=NO \
-        -archivePath $PWD/HelloReactNative \
+        -archivePath $PWD/ReactNativeCallingCodePicker \
         CODE_SIGNING_ALLOWED=NO"
