--- a/.github/workflows/build_test_ios.yml
+++ b/.github/workflows/build_test_ios.yml
@@ -1,26 +1,35 @@
-name: iOS
-on: [push, pull_request]
+# workflow name
+name: Unit Tests
+
+# execute on events
+on:
+  push:
+    branches:
+      - master
+
+# jobs to run
 jobs:
-  build:
-    runs-on: macos-latest
+  
+  # install dependencies and run test command
+  test:
+    name: Test
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-    - run: npm ci
-    - run: xcode-select -p
-    - run: pod install
-      working-directory: ios
-      name: Install pod dependencies
-    - name: Build iOS (debug)
-      run: "xcodebuild \
-        -workspace ios/ReactNativeCallingCodePicker.xcworkspace \
-        -scheme ReactNativeCallingCodePicker \
-        clean archive \
-        -sdk iphoneos \
-        -configuration Debug \
-        -UseModernBuildSystem=NO \
-        -archivePath $PWD/ReactNativeCallingCodePicker \
-        CODE_SIGNING_ALLOWED=NO"
+
+      # 1: setup node
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      # 2: Checkout repository in the CWD
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # 3: install NPM dependencies
+      - name: Install dependencies
+        run: npm install
+      
+      # 4: run test command
+      - name: Run test command
+        run: npm run test
