--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,11 +23,20 @@ jobs:
       # 2: Checkout repository in the CWD
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      # 3: install NPM dependencies
+      
+      # 3: Cache dependencies
+      - name: Cache NPM dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache-
+          
+      # 4: install NPM dependencies
       - name: Install dependencies
         run: npm install
       
-      # 4: run test command
+      # 5: run test command
       - name: Run test command
         run: npm run test
