--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -24,7 +24,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-     
+      # 3: Cache dependencies
+      - name: Cache NPM dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache-
           
       # 4: install NPM dependencies
       - name: Install dependencies
