--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@digieggs/rn-country-code-picker",
-  "version": "1.2.1",
+  "version": "1.3.1",
   "main": "lib/module/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
   "types": "lib/typescript/index.d.ts",
   "description": "A searchable dropdown component to select a country code for your phone number input.",
+  "license": "MIT",
   "files": [
     "lib/",
     "src/"
