--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digieggs/rn-country-code-picker",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "main": "lib/module/index.js",
   "module": "lib/module/index.js",
   "react-native": "src/index.ts",
@@ -35,9 +35,9 @@
   "dependencies": {
     "@testing-library/react-native": "^8.0.0",
     "react": "^17.0.2",
-    "react-native": "^0.66.2",
-    "react-native-localize": "^2.1.5",
-    "react-native-svg": "^12.1.1"
+    "react-native": "0.68.1",
+    "react-native-localize": "^2.2.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -55,10 +55,6 @@
     "react-native-builder-bob": "^0.18.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^3.8.3"
-  },
-  "peerDependencies": {
-    "react-native-localize": "^2.0.1",
-    "react-native-svg": "^12.1.0"
   },
   "repository": {
     "type": "git",
